0.3.10
- sql
    - better quoting of identifiers when manipulating schemas
    - got connection-bound metadata to work with implicit execution
    - foreign key specs can have any chararcter in their identifiers
     [ticket:667]
    - added commutativity-awareness to binary clause comparisons to
      each other, improves ORM lazy load optimization [ticket:664]
- orm
    - cleanup to connection-bound sessions, SessionTransaction
- mysql
    - fixed issue with tables in alternate schemas [ticket:662]
- postgres
    - fixed max identifier length (63) [ticket:571]

0.3.9
- general
    - better error message for NoSuchColumnError [ticket:607]
    - finally figured out how to get setuptools version in, available
      as sqlalchemy.__version__ [ticket:428]
    - the various "engine" arguments, such as "engine", "connectable",
      "engine_or_url", "bind_to", etc. are all present, but deprecated.
      they all get replaced by the single term "bind".  you also
      set the "bind" of MetaData using 
      metadata.bind = <engine or connection>
- ext
    - iteration over dict association proxies is now dict-like, not
      InstrumentedList-like (e.g. over keys instead of values)
    - association proxies no longer bind tightly to source collections
      [ticket:597], and are constructed with a thunk instead
    - added selectone_by() to assignmapper
- orm
    - forwards-compatibility with 0.4: added one(), first(), and 
      all() to Query.  almost all Query functionality from 0.4 is
      present in 0.3.9 for forwards-compat purposes.
    - reset_joinpoint() really really works this time, promise ! lets
      you re-join from the root:
      query.join(['a', 'b']).filter(<crit>).reset_joinpoint().\
      join(['a', 'c']).filter(<some other crit>).all()
      in 0.4 all join() calls start from the "root"
    - added synchronization to the mapper() construction step, to avoid
      thread collisions when pre-existing mappers are compiling in a 