@@ -1,4 +1,10 @@
 0.3.10
+- general
+    - a new mutex that was added in 0.3.9 causes the pool_timeout
+      feature to fail during a race condition; threads would 
+      raise TimeoutError immediately with no delay if many threads 
+      push the pool into overflow at the same time.  this issue has been
+      fixed.
 - sql
     - better quoting of identifiers when manipulating schemas
     - got connection-bound metadata to work with implicit execution
